--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  padding-top: 10vh;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10vh;
+  
 }
 
 .App-logo {
@@ -36,6 +41,45 @@
     transform: rotate(360deg);
   }
 }
-.navbar{
- border-color: black;
+
+.blogpost{
+ border-radius: 10px;
+ border-color: gray;
+}
+
+li{
+ float:left;
+ align-items:center;
+}
+.navbar-brand{
+ float:right;
+ padding: 8px;
+ 
+}
+.navbar-item{
+ float: left;
+ display:block;
+ padding: 8px;
+ background-color: #800000;
+ cursor: pointer;
+ height: 100%;
+}
+.navbar-item:hover{
+ background-color: #65211C;
+}
+
+.footer{
+ position:fixed;
+ bottom: 0;
+ width: 100%;
+ height: 5vh;
+ background: lightgray;
+}
+
+.signature{
+ float: right;
+ color: gray;
+ padding: 8px;
+ font-family: monospace;
+
 }
