--- a/src/App.css
+++ b/src/App.css
@@ -84,30 +84,35 @@ li{
 
 }
 
-#homepagetext{
- text-align: center;
- align-items: center;
- font-family: monospace;
- justify-content:center;
- float: center;
- justify-items:center;
- display: grid;
- 
-}
 
 .smallerimg{
  width:200px;
  height:200px;
- justify-self: center;
- align-self: center;
- padding: 1vh;
+ position:relative;
+ top :30%;
+ left:50%;
+ transform:translate(-50%,-50%);
+ margin-bottom: 25px;
 }
-.blogpage{
+
+.page-holder{
  display: grid;
- grid-template-columns: 1fr, 2fr, 2fr, 2fr, 1fr;
-} 
-.blogpost{
- display: grid;
- grid-column-start: 1;
- grid-column-end: 4;
-} 
+ grid-template-columns: auto 70% auto ;
+ grid-template-rows: auto 60px;
+ grid-template-areas:
+  ". main ."
+  "footer footer footer"
+  ;
+}
+
+.header-properties{
+ text-align: center;
+ padding: 10px;
+}
+
+
+.page-item{
+ grid-area: main;
+}
+
+
