--- a/src/App.css
+++ b/src/App.css
@@ -98,9 +98,10 @@ li{
 .page-holder{
  display: grid;
  grid-template-columns: auto 70% auto ;
- grid-template-rows: auto 60px;
+ grid-template-rows: 75px auto 60px;
  grid-template-areas:
-  ". main ."
+  ". . ."
+ ". main ."
   "footer footer footer"
   ;
 }
