--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,57 @@ li{
 }
 
 
+.dropdown{
+  float:left;
+  overflow:hidden;
+}
+
+.dropdown .dropbutton{
+  border:none;
+  outline:none;
+  padding:14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+.dropbutton:active{
+    color: lightgray;
+    background-image: linear-gradient(rgb(0 0 0/30%) 0 0);
+  }
+.dropbutton:hover{
+    color: lightgray;
+    background-image: linear-gradient(rgb(0 0 0/30%) 0 0);
+}
+.dropdown-content{
+  display:none;
+  position:absolute;
+  background-color: maroon;
+  color: black;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index:1;
+}
+.dropdown-content NavLink{
+  float: none;
+  color: black
+}
+.dropdown-content:hover{
+
+}
+
+.dropdown:hover .dropdown-content{
+  display:block;
+}
+.navElement{
+color: white;
+ display:grid;
+ align-items: center;
+ text-decoration: none;
+ padding: 0 1rem;
+ cursor: pointer;
+ height: 100%;
+}
+
+.screwnavcolor{
+  color:black;
+}
