--- a/src/App.css
+++ b/src/App.css
@@ -48,33 +48,20 @@
 .dropdown{
   float:left;
   overflow:hidden;
+  width:100%;
 }
 
-.dropdown .dropbutton{
-  border:none;
-  outline:none;
-  padding:14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-.dropbutton:active{
-    color: lightgray;
-    background-image: linear-gradient(rgb(0 0 0/30%) 0 0);
-  }
-.dropbutton:hover{
-    color: lightgray;
-    background-image: linear-gradient(rgb(0 0 0/30%) 0 0);
-}
+
 .dropdown-content{
   display:none;
   position:absolute;
   background-color: maroon;
-  color: black;
-  min-width: 200px;
+  color: silver;
+  min-width: 225px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index:1;
 }
+
 .dropdown-content NavLink{
   float: none;
   color: black
@@ -146,6 +133,19 @@ li{
  }
 
 /* Main Page Rules */
+
+.h1blogpage{
+  font-size: 30px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.h2blogpage{
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 .page-holder{
  display: grid;
  background: linear-gradient(lightgray,gray) no-repeat center center fixed;
@@ -198,3 +198,15 @@ p{
  
  }
  
+ /* Blog Pages Cards */
+ .card-link{
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+ }
+ 
+ .card-link:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+ }
